@@ -3,18 +3,18 @@
 OPENJDK_VERSION = b136
 
 CORBA_CHANGESET = b62418551e20
-HOTSPOT_CHANGESET = ef8632d52263
+HOTSPOT_CHANGESET = 74ff0c608935
 JAXP_CHANGESET = 1c2f25bf36b1
 JAXWS_CHANGESET = 339c2d381d80
-JDK_CHANGESET = 49098163596b
+JDK_CHANGESET = fcc5e53dca33
 LANGTOOLS_CHANGESET = 8e26c4aee63c
 OPENJDK_CHANGESET = d4aea1a51d62
 
 CORBA_SHA256SUM = 60f8494b1ebf58db75fe8871dcbee1f6e4bd1d8d6c9b6ce49dad7a6a6340c4ac
-HOTSPOT_SHA256SUM = d939f29993a75c263b9b0bed8ccb74340860681ec8be1a62a76946ca9502255d
+HOTSPOT_SHA256SUM = fe5d240d87a5680f05a80236a087a67ad7ab190d8ea92057bf5180a50d233765
 JAXP_SHA256SUM = 9db874ee86a073776674b138c3bcd0b1b2bc90d31ed48d59f88021e93ac8a8d0
 JAXWS_SHA256SUM = 078ad45ced056d147344418e72dce6dca65e01c4ebf2b7008b74733774bcb24c
-JDK_SHA256SUM = b8f78ac3aeb61a5ccf214f5d1f962a052e127c26a6096186938766bd8ba8a871
+JDK_SHA256SUM = 128026428ea4aa9068964e50df25013971c80f1ba63c600f7d15418e49031627
 LANGTOOLS_SHA256SUM = e1beab78534a3a0fb18404c3c200e8866da275c7c656172c9f295f11203e5f39
 OPENJDK_SHA256SUM = 856b791751e56f64cc10e4826eefc9af9882969b179595c9642f7c9771965e7d
 
